# laptop-price-prediction

./: .gitignore  LICENSE  README.md  anphat.html  app.py  cookies.pkl  fpt_parse_raw.ipynb  notebook.ipynb  pyproject.toml  requirements.txt  test.html  test.ipynb  test_parse.ipynb
assets/: alive_proxies.txt  proxies.txt
checkpoint/: AdaBoostRegressor.pkl  BaggingRegressor.pkl  GradientBoostingRegressor.pkl  RandomForestRegressor.pkl  XGBRegressor.pkl  ohe.pkl
config/: anphat.json  fpt.json  tgdd.json
data/: data_9.csv  merged_data.csv  process_data.csv  tgdd.csv
data/anphat/: anphat_product_links.json
data/anphat/raw_htmls/: acer_0.html  acer_1.html  acer_10.html  acer_11.html  acer_12.html  acer_13.html  acer_14.html  acer_15.html  acer_16.html  acer_17.html  acer_18.html  acer_19.html  acer_2.html  acer_20.html  acer_21.html  acer_22.html  acer_23.html  acer_24.html  acer_25.html  acer_26.html  acer_27.html  acer_28.html  (+504 more)
data/fpt/: all_columns_fpt.json  fpt.csv  fpt_product_links.json  parse_results.json
data/tgdd/: tgdd_product_links.json
database/: introds.db
demo/: app.py
notebook/: EDA.ipynb  Gradio.html  regex.ipynb  test.ipynb  train.ipynb
notebook/crawler/: fpt_fix_missing.ipynb  fpt_parse_raw.ipynb
src/crawler/: anphat.py  base.py  crawl_urls.py  fetch_htmls_and_parse_specs.py  fpt.py  just_parse_specs.py  parse_specs.py  tgdd.py
src/model/: evaluate.py  model.py
src/preprocessing/: dataset.py
src/test/: get_html.py  hh.py  parse_html.py  test.py
src/train/: __main__.py
src/utils/: crawler.py  openai.py  proxy.py  selenium.py
(+911 files in other folders)
