[project]
name = "data-science-project"
authors = [{name = "datvodinh", email = "vodinhdat03@gmail.com"}]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "scrapy",
    "beautifulsoup4",
    "requests",
    "pymongo",
    "selenium",
    "webdriver-manager",
    "dev_tools_supporter",
    "scikit-learn",
    "pandas",
    "numpy",
    "matplotlib",
    "polars",
    "xgboost",
    "undetected-chromedriver"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
