[project]
name = "data-science-project"
authors = [{name = "datvodinh", email = "vodinhdat03@gmail.com"}]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "scrapy",
    "beautifulsoup4",
    "requests",
    "selenium",
    "webdriver-manager",
    "dev_tools_supporter",
    "scikit-learn",
    "dev_tools_supporter",
    "pandas",
    "numpy",
    "matplotlib",
    "polars",
    "xgboost",
    "gradio==4.12.0"

[project.optional-dependencies]
dev = [
    "pytest"
]
